--- a/WindowsFormsApplication1/App.config
+++ b/WindowsFormsApplication1/App.config
@@ -6,6 +6,9 @@
         <add name="WindowsFormsApplication1.Properties.Settings.testConnectionString"
             connectionString="Data Source=ALICE;Initial Catalog=test;Integrated Security=True"
             providerName="System.Data.SqlClient" />
+        <add name="WindowsFormsApplication1.Properties.Settings.cdsjConnectionString"
+            connectionString="Data Source=DESKTOP-SK2RD82;Initial Catalog=cdsj;Integrated Security=True"
+            providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
